# kah_engine_c

./: .gitignore  CMakeLists.txt  CMakePresets.json
assets/shaders/lit/: lit.frag  lit.vert
assets/textures/: texture_distribution_info.txt
libs/kah_converter/: CMakeLists.txt
libs/kah_converter/inc/kah_converter/: converter_interface.h
libs/kah_converter/src/: converter_backend.c  converter_cache.c  converter_shader.c  converter_texture.c
libs/kah_core/: CMakeLists.txt
libs/kah_core/inc/kah_core/: allocators.h  assert.h  bit_array.h  c_string.h  core_cvars.h  cvar.h  dds_loader.h  defines.h  dynamic_array.h  file_io.h  filesystem.h  fixed_array.h  input.h  input_types.h  logging.h  memory.h  string_table.h  texture_formats.h  time.h  utils.h  window.h
libs/kah_core/inc/kah_core/tests/: test_bits.h  test_data_structures.h
libs/kah_core/src/: allocators.c  assert.c  bit_array.c  c_string.c  core_cvars.c  cvar.c  dds_loader.c  dynamic_array.c  file_io.c  filesystem_linux.c  filesystem_win32.c  fixed_array.c  input.c  memory.c  string_table.c  time_linux.c  time_win32.c  window_linux.c  window_win32.c
libs/kah_core/src/tests/: test_bits.c  test_data_structures.c
libs/kah_gfx/: CMakeLists.txt
libs/kah_gfx/inc/kah_gfx/: gfx_converter.h  gfx_interface.h  gfx_logging.h  gfx_pool.h  gfx_task_graph.h  gfx_types.h
libs/kah_gfx/inc/kah_gfx/vulkan/: gfx_vulkan.h  gfx_vulkan_bindless.h  gfx_vulkan_buffer.h  gfx_vulkan_imgui.h  gfx_vulkan_interface.h  gfx_vulkan_lit.h  gfx_vulkan_mesh.h  gfx_vulkan_pipeline_builder.h  gfx_vulkan_resource.h  gfx_vulkan_shader.h  gfx_vulkan_surface.h  gfx_vulkan_texture.h  gfx_vulkan_types.h  gfx_vulkan_uniform_buffers.h  gfx_vulkan_utils.h
libs/kah_gfx/src/: gfx_converter.c  gfx_logging.c  gfx_pool.c  gfx_task_graph.c  gfx_vulkan_uniform_buffers.c
libs/kah_gfx/src/vulkan/: gfx_vulkan.c  gfx_vulkan_backend.c  gfx_vulkan_bindless.c  gfx_vulkan_buffer.c  gfx_vulkan_imgui.c  gfx_vulkan_lit.c  gfx_vulkan_mesh.c  gfx_vulkan_pipeline_builder.c  gfx_vulkan_resource.c  gfx_vulkan_shader.c  gfx_vulkan_surface_linux.c  gfx_vulkan_surface_win.c  gfx_vulkan_texture.c  gfx_vulkan_utils.c
libs/kah_math/: CMakeLists.txt
libs/kah_math/inc/kah_math/: defines.h  mat4.h  math_assert.h  print.h  quat.h  transform.h  utils.h  vec2.h  vec3.h  vec4.h
libs/kah_math/src/: mat4.c  math_assert.c  print.c  utils.c  vec4..c
projects/kah_game/: CMakeLists.txt  main.c
projects/kah_game/inc/client/: entity_builder.h
projects/kah_game/inc/client/scripts/: script_camera.h  script_manager.h
projects/kah_game/inc/client/widgets/: widget_manager.h  widget_pool_inspector.h
projects/kah_game/src/: entity_builder.c
projects/kah_game/src/scripts/: script_camera.c  script_manager.c
projects/kah_game/src/widgets/: widget_manager.c  widget_pool_inspector.c
